// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base DOM Snapshot 1`] = `
<ul
  className="slds-accordion"
  name="base-example-accordion"
>
  <li
    className="slds-accordion__list-item"
  >
    <section
      className="slds-accordion__section"
    >
      <div
        className="slds-accordion__summary"
      >
        <h3
          className="slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate"
        >
          <button
            aria-controls="1-accordion-panel"
            aria-expanded={false}
            className="slds-button slds-button_reset slds-accordion__summary-action"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#switch"
              />
            </svg>
            <span
              className="slds-truncate"
              title="Accordion Summary"
            >
              Accordion Summary
            </span>
          </button>
        </h3>
        <div
          className="slds-dropdown-trigger slds-dropdown-trigger--click"
          id="ButtonGroupExampleDropdown"
          onClick={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onMouseEnter={null}
          onMouseLeave={null}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="slds-button slds-button--icon-border-filled slds-button--icon-x-small ignore-click-ButtonGroupExampleDropdown slds-shrink-none"
            disabled={false}
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              More Options
            </span>
          </button>
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slds-accordion__content"
        id="1-accordion-panel"
      >
        Accordion details - A
      </div>
    </section>
  </li>
  <li
    className="slds-accordion__list-item"
  >
    <section
      className="slds-accordion__section"
    >
      <div
        className="slds-accordion__summary"
      >
        <h3
          className="slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate"
        >
          <button
            aria-controls="2-accordion-panel"
            aria-expanded={false}
            className="slds-button slds-button_reset slds-accordion__summary-action"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#switch"
              />
            </svg>
            <span
              className="slds-truncate"
              title="Accordion Summary"
            >
              Accordion Summary
            </span>
          </button>
        </h3>
        <div
          className="slds-dropdown-trigger slds-dropdown-trigger--click"
          id="ButtonGroupExampleDropdown"
          onClick={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onMouseEnter={null}
          onMouseLeave={null}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="slds-button slds-button--icon-border-filled slds-button--icon-x-small ignore-click-ButtonGroupExampleDropdown slds-shrink-none"
            disabled={false}
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              More Options
            </span>
          </button>
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slds-accordion__content"
        id="2-accordion-panel"
      >
        Accordion details - B
      </div>
    </section>
  </li>
  <li
    className="slds-accordion__list-item"
  >
    <section
      className="slds-accordion__section"
    >
      <div
        className="slds-accordion__summary"
      >
        <h3
          className="slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate"
        >
          <button
            aria-controls="3-accordion-panel"
            aria-expanded={false}
            className="slds-button slds-button_reset slds-accordion__summary-action"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#switch"
              />
            </svg>
            <span
              className="slds-truncate"
              title="Accordion Summary"
            >
              Accordion Summary
            </span>
          </button>
        </h3>
        <div
          className="slds-dropdown-trigger slds-dropdown-trigger--click"
          id="ButtonGroupExampleDropdown"
          onClick={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onMouseEnter={null}
          onMouseLeave={null}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="slds-button slds-button--icon-border-filled slds-button--icon-x-small ignore-click-ButtonGroupExampleDropdown slds-shrink-none"
            disabled={false}
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              More Options
            </span>
          </button>
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slds-accordion__content"
        id="3-accordion-panel"
      >
        Accordion details - C
      </div>
    </section>
  </li>
</ul>
`;

exports[`Base HTML Snapshot 1`] = `
"<ul name=\\"base-example-accordion\\" class=\\"slds-accordion\\">
  <li class=\\"slds-accordion__list-item\\">
    <section class=\\"slds-accordion__section\\">
      <div class=\\"slds-accordion__summary\\">
        <h3 class=\\"slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate\\"><button aria-controls=\\"1-accordion-panel\\" aria-expanded=\\"false\\" class=\\"slds-button slds-button_reset slds-accordion__summary-action\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#switch\\"></use></svg><span class=\\"slds-truncate\\" title=\\"Accordion Summary\\">Accordion Summary</span></button></h3>
        <div
          class=\\"slds-dropdown-trigger slds-dropdown-trigger--click\\" id=\\"ButtonGroupExampleDropdown\\"><button aria-expanded=\\"false\\" aria-haspopup=\\"true\\" class=\\"slds-button slds-button--icon-border-filled slds-button--icon-x-small ignore-click-ButtonGroupExampleDropdown slds-shrink-none\\" tabindex=\\"0\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#down\\"></use></svg><span class=\\"slds-assistive-text\\">More Options</span></button></div>
      </div>
      <div aria-hidden=\\"true\\" class=\\"slds-accordion__content\\" id=\\"1-accordion-panel\\">Accordion details - A</div>
    </section>
  </li>
  <li class=\\"slds-accordion__list-item\\">
    <section class=\\"slds-accordion__section\\">
      <div class=\\"slds-accordion__summary\\">
        <h3 class=\\"slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate\\"><button aria-controls=\\"2-accordion-panel\\" aria-expanded=\\"false\\" class=\\"slds-button slds-button_reset slds-accordion__summary-action\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#switch\\"></use></svg><span class=\\"slds-truncate\\" title=\\"Accordion Summary\\">Accordion Summary</span></button></h3>
        <div
          class=\\"slds-dropdown-trigger slds-dropdown-trigger--click\\" id=\\"ButtonGroupExampleDropdown\\"><button aria-expanded=\\"false\\" aria-haspopup=\\"true\\" class=\\"slds-button slds-button--icon-border-filled slds-button--icon-x-small ignore-click-ButtonGroupExampleDropdown slds-shrink-none\\" tabindex=\\"0\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#down\\"></use></svg><span class=\\"slds-assistive-text\\">More Options</span></button></div>
      </div>
      <div aria-hidden=\\"true\\" class=\\"slds-accordion__content\\" id=\\"2-accordion-panel\\">Accordion details - B</div>
    </section>
  </li>
  <li class=\\"slds-accordion__list-item\\">
    <section class=\\"slds-accordion__section\\">
      <div class=\\"slds-accordion__summary\\">
        <h3 class=\\"slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate\\"><button aria-controls=\\"3-accordion-panel\\" aria-expanded=\\"false\\" class=\\"slds-button slds-button_reset slds-accordion__summary-action\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#switch\\"></use></svg><span class=\\"slds-truncate\\" title=\\"Accordion Summary\\">Accordion Summary</span></button></h3>
        <div
          class=\\"slds-dropdown-trigger slds-dropdown-trigger--click\\" id=\\"ButtonGroupExampleDropdown\\"><button aria-expanded=\\"false\\" aria-haspopup=\\"true\\" class=\\"slds-button slds-button--icon-border-filled slds-button--icon-x-small ignore-click-ButtonGroupExampleDropdown slds-shrink-none\\" tabindex=\\"0\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#down\\"></use></svg><span class=\\"slds-assistive-text\\">More Options</span></button></div>
      </div>
      <div aria-hidden=\\"true\\" class=\\"slds-accordion__content\\" id=\\"3-accordion-panel\\">Accordion details - C</div>
    </section>
  </li>
</ul>"
`;

exports[`Base Open DOM Snapshot 1`] = `
<ul
  className="slds-accordion"
  name="base-example-accordion"
>
  <li
    className="slds-accordion__list-item"
  >
    <section
      className="slds-accordion__section slds-is-open"
    >
      <div
        className="slds-accordion__summary"
      >
        <h3
          className="slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate"
        >
          <button
            aria-controls="1-accordion-panel"
            aria-expanded={true}
            className="slds-button slds-button_reset slds-accordion__summary-action"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#switch"
              />
            </svg>
            <span
              className="slds-truncate"
              title="Accordion Summary"
            >
              Accordion Summary
            </span>
          </button>
        </h3>
      </div>
      <div
        aria-hidden={false}
        className="slds-accordion__content"
        id="1-accordion-panel"
      >
        Accordion details - A
      </div>
    </section>
  </li>
  <li
    className="slds-accordion__list-item"
  >
    <section
      className="slds-accordion__section slds-is-open"
    >
      <div
        className="slds-accordion__summary"
      >
        <h3
          className="slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate"
        >
          <button
            aria-controls="2-accordion-panel"
            aria-expanded={true}
            className="slds-button slds-button_reset slds-accordion__summary-action"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#switch"
              />
            </svg>
            <span
              className="slds-truncate"
              title="Accordion Summary"
            >
              Accordion Summary
            </span>
          </button>
        </h3>
      </div>
      <div
        aria-hidden={false}
        className="slds-accordion__content"
        id="2-accordion-panel"
      >
        Accordion details - B
      </div>
    </section>
  </li>
</ul>
`;

exports[`Base Open HTML Snapshot 1`] = `
"<ul name=\\"base-example-accordion\\" class=\\"slds-accordion\\">
  <li class=\\"slds-accordion__list-item\\">
    <section class=\\"slds-accordion__section slds-is-open\\">
      <div class=\\"slds-accordion__summary\\">
        <h3 class=\\"slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate\\"><button aria-controls=\\"1-accordion-panel\\" aria-expanded=\\"true\\" class=\\"slds-button slds-button_reset slds-accordion__summary-action\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#switch\\"></use></svg><span class=\\"slds-truncate\\" title=\\"Accordion Summary\\">Accordion Summary</span></button></h3>
      </div>
      <div aria-hidden=\\"false\\" class=\\"slds-accordion__content\\" id=\\"1-accordion-panel\\">Accordion details - A</div>
    </section>
  </li>
  <li class=\\"slds-accordion__list-item\\">
    <section class=\\"slds-accordion__section slds-is-open\\">
      <div class=\\"slds-accordion__summary\\">
        <h3 class=\\"slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate\\"><button aria-controls=\\"2-accordion-panel\\" aria-expanded=\\"true\\" class=\\"slds-button slds-button_reset slds-accordion__summary-action\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#switch\\"></use></svg><span class=\\"slds-truncate\\" title=\\"Accordion Summary\\">Accordion Summary</span></button></h3>
      </div>
      <div aria-hidden=\\"false\\" class=\\"slds-accordion__content\\" id=\\"2-accordion-panel\\">Accordion details - B</div>
    </section>
  </li>
</ul>"
`;
